--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="col-md-3 col-6">
                 <div style="height: 250px; background-color: brown;"></div>
             </div>
+        </div>    
         <div class="row mt-5">
             <div class="col-md-3 col-6">
                  <div style="height: 250px; background-color: brown;"></div>
